add performance test result